# bigint

./: .clang-format  CMakeLists.txt
play/: main.cpp
scripts/: style.sh
src/: big_integer.cpp  big_integer.hpp  bigint.cpp  bigint.hpp  prob.cpp  prob.hpp
test/: test.cpp
